name:               feed-merge
version:            0.0.0
synopsis:           Combine RSS feeds into a more easily-digestible feed.
description:        Combine RSS feeds into a more easily-digestible feed.
category:           Network
license:            BSD3
author:             Zeke Foppa
homepage:           https://github.com/bfops/feed-merge
maintainer:         benjamin.foppa@gmail.com
build-type:         Simple
cabal-version:      >= 1.9.2

library 
    hs-source-dirs:   src
    exposed-modules:  Text.Feed.Merge
    ghc-options:      -Wall -Werror -fno-warn-name-shadowing
    build-depends:    base == 4.*
                    , feed
                    , time
                    , time-locale-compat

executable print-merged
    hs-source-dirs:   .
    main-is: examples/print-merged.hs
    ghc-options: -Wall -Werror -fno-warn-name-shadowing
    build-depends: base == 4.*
                 , curl
                 , feed
                 , feed-merge
                 , xml

source-repository head
  type: git
  location: https://github.com/bfops/feed-merge
